<package format="2">
  <name>luset_geometry_pkg</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for luset_geometry_pkg</p>
    <p>This package contains configuration data, 3D models and launch files
for luset_geometry_pkg robot</p>
  </description>
  <author>Nicholas Palomo</author>
  <maintainer email="npalomo@student.ethz.ch" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <exec_depend>urdf</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>